--- a/src/package.json
+++ b/src/package.json
@@ -1,49 +1,9 @@
 {
-  "name": "trapparty",
-  "private": true,
-  "version": "3.15.5",
-  "description": "TrapParty's website.",
   "author": "Jonas Thelemann",
-  "type": "module",
-  "engines": {
-    "node": "20"
-  },
-  "scripts": {
-    "build": "pnpm run build:node",
-    "build:node": "nuxt build",
-    "build:static": "nuxt generate",
-    "dev": "pnpm run start:dev",
-    "generate": "pnpm run build:static",
-    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
-    "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
-    "lint:js": "eslint --cache",
-    "lint:staged": "lint-staged",
-    "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
-    "lint:ts": "nuxt typecheck",
-    "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
-    "prepare": "nuxt prepare",
-    "preview": "nuxt preview",
-    "start:dev": "nuxt dev",
-    "start:node": "node .output/server/index.mjs",
-    "start:static": "serve .output/public",
-    "test:e2e:docker:br": "pnpm run test:e2e:docker:build && pnpm run test:e2e:docker:run",
-    "test:e2e:docker:build": "docker build -t test-e2e_development --build-arg UID=$(id -u) --build-arg GID=$(id -g) --target test-e2e_development ..",
-    "test:e2e:docker:run": "docker run --rm -v \"$PWD/..:/srv/app\" -v \"$(pnpm store path):/srv/.pnpm-store\" test-e2e_development",
-    "test:e2e:docker:server:dev:update": "pnpm run test:e2e:docker:server:dev --update-snapshots",
-    "test:e2e:docker:server:dev": "pnpm run test:e2e:docker:br pnpm --dir src run test:e2e:server:dev",
-    "test:e2e:docker:server:node:update": "pnpm run test:e2e:docker:server:node --update-snapshots",
-    "test:e2e:docker:server:node": "pnpm run test:e2e:docker:br pnpm --dir src run test:e2e:server:node",
-    "test:e2e:docker:server:static:update": "pnpm run test:e2e:docker:server:static --update-snapshots",
-    "test:e2e:docker:server:static": "pnpm run test:e2e:docker:br pnpm --dir src run test:e2e:server:static",
-    "test:e2e:server:dev": "cross-env PORT=3000 SITE_URL=http://localhost:3000 VIO_SERVER=dev pnpm run test:e2e",
-    "test:e2e:server:node": "cross-env NODE_ENV=production NUXT_PUBLIC_I18N_BASE_URL=http://localhost:3001 NUXT_PUBLIC_SITE_URL=http://localhost:3001 PORT=3001 VIO_SERVER=node pnpm run test:e2e",
-    "test:e2e:server:static": "cross-env NODE_ENV=production PORT=3002 SITE_URL=http://localhost:3002 VIO_SERVER=static pnpm run test:e2e",
-    "test:e2e": "playwright test"
-  },
+  "description": "TrapParty's website.",
   "devDependencies": {
-    "@axe-core/playwright": "4.9.1",
     "@dargmuesli/nuxt-cookie-control": "8.4.2",
-    "@dargmuesli/nuxt-vio": "13.1.3",
+    "@dargmuesli/nuxt-vio": "13.1.5",
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "4.3.0",
     "@graphql-codegen/typescript-urql-graphcache": "3.1.0",
@@ -52,7 +12,6 @@
     "@nuxtjs/i18n": "8.3.0",
     "@pinia-plugin-persistedstate/nuxt": "1.2.0",
     "@pinia/nuxt": "0.5.1",
-    "@playwright/test": "1.44.1",
     "@types/color": "3.0.6",
     "@types/lodash-es": "4.17.12",
     "@urql/core": "5.0.4",
@@ -64,15 +23,11 @@
     "chart.js": "4.4.3",
     "color": "4.2.3",
     "consola": "3.2.3",
-    "cross-env": "7.0.3",
     "defu": "6.1.4",
     "graphql": "16.8.2",
-    "jiti": "1.21.6",
-    "lint-staged": "15.2.7",
     "lodash-es": "4.17.21",
-    "nuxt": "3.12.2",
+    "nuxt": "3.11.2",
     "nuxt-security": "2.0.0-rc.6",
-    "playwright-core": "1.44.1",
     "prettier-plugin-tailwindcss": "0.6.5",
     "rainbowvis.js": "1.1.1",
     "serve": "14.2.3",
@@ -86,5 +41,31 @@
     "vue": "3.4.29",
     "vue-chartjs": "5.3.1",
     "vue-router": "4.3.3"
-  }
+  },
+  "engines": {
+    "node": "20"
+  },
+  "name": "trapparty",
+  "private": true,
+  "scripts": {
+    "build": "pnpm run build:node",
+    "build:node": "nuxt build",
+    "build:static": "nuxt generate",
+    "dev": "pnpm run start:dev",
+    "generate": "pnpm run build:static",
+    "gql:codegen": "NODE_TLS_REJECT_UNAUTHORIZED=0 graphql-codegen --config .codegenrc.ts",
+    "lint": "pnpm run lint:js && pnpm run lint:ts && pnpm run lint:style",
+    "lint:fix": "pnpm run lint:js --fix && pnpm run lint:ts --fix && pnpm run lint:style --fix",
+    "lint:js": "eslint --cache",
+    "lint:staged": "lint-staged",
+    "lint:style": "stylelint --cache \"**/*.{vue,css}\" --ignore-path .gitignore",
+    "lint:ts": "nuxt typecheck",
+    "prepare": "nuxt prepare && ./.config/certificates/mkcert.sh",
+    "preview": "nuxt preview",
+    "start:dev": "nuxt dev",
+    "start:node": "node .output/server/index.mjs",
+    "start:static": "serve .output/public --ssl-cert ./.config/certificates/ssl.crt --ssl-key ./.config/certificates/ssl.key"
+  },
+  "type": "module",
+  "version": "3.15.5"
 }
