--- a/package.json
+++ b/package.json
@@ -41,10 +41,5 @@
     "test:e2e:server:static": "pnpm --dir src run test:e2e:server:static",
     "test:e2e": "pnpm --dir src run test:e2e"
   },
-  "type": "module",
-  "pnpm": {
-    "overrides": {
-      "@nuxtjs/i18n": "8.3.0"
-    }
-  }
+  "type": "module"
 }
