--- a/.renovaterc
+++ b/.renovaterc
@@ -7,6 +7,12 @@
     {
       "matchPackageNames": ["@pinia/nuxt"],
       "allowedVersions": "0.5.5"
+    },
+    {
+      "matchPackageNames": [
+        "typescript"
+      ],
+      "allowedVersions": "5.6.3"
     }
   ]
 }
