--- a/.dockerignore
+++ b/.dockerignore
@@ -4,7 +4,8 @@ src/.nuxt/
 src/.output/
 src/dist/
 src/node_modules/
-src/tests/e2e/report/
-src/tests/e2e/results/
 src/.env
 src/.eslintcache
+src/.stylelintcache
+tests/e2e/report/
+tests/e2e/results/
