--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "lodash-es": "4.17.21",
     "nuxt": "3.15.1",
     "nuxt-security": "2.1.5",
+    "pinia": "2.3.0",
     "prettier-plugin-tailwindcss": "0.6.9",
     "rainbowvis.js": "1.1.1",
     "serve": "14.2.4",
