--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -2,5 +2,13 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "github>dargmuesli/renovate-config"
+  ],
+  "packageRules": [
+    {
+      "matchPackageNames": [
+        "nuxt-og-image"
+      ],
+      "allowedVersions": "4.0.1"
+    }
   ]
 }
