--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
     "color": "4.2.3",
     "consola": "3.4.0",
     "defu": "6.1.4",
+    "eslint": "9.19.0",
     "graphql": "16.10.0",
     "lodash-es": "4.17.21",
     "nuxt": "3.15.4",
