--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "description": "TrapParty's website.",
   "devDependencies": {
     "@dargmuesli/nuxt-cookie-control": "8.5.2",
-    "@dargmuesli/nuxt-vio": "17.0.1",
+    "@dargmuesli/nuxt-vio": "17.0.2-beta.2",
     "@graphql-codegen/cli": "5.0.5",
     "@graphql-codegen/client-preset": "4.6.4",
     "@graphql-codegen/typescript": "4.1.5",
