--- a/src/package.json
+++ b/src/package.json
@@ -45,7 +45,8 @@
     "unplugin-vue-components": "28.8.0",
     "vue": "3.5.17",
     "vue-chartjs": "5.3.2",
-    "vue-router": "4.5.1"
+    "vue-router": "4.5.1",
+    "vue-tsc": "3.0.1"
   },
   "engines": {
     "node": "22"
