--- a/src/package.json
+++ b/src/package.json
@@ -31,6 +31,7 @@
     "nuxt": "4.0.3",
     "nuxt-security": "2.3.0",
     "pinia": "3.0.3",
+    "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "rainbowvis.js": "1.1.1",
     "serve": "14.2.4",
