--- a/src/package.json
+++ b/src/package.json
@@ -11,7 +11,6 @@
     "@graphql-codegen/urql-introspection": "3.0.1",
     "@graphql-typed-document-node/core": "3.2.0",
     "@iconify-json/heroicons": "1.2.2",
-    "@pinia-plugin-persistedstate/nuxt": "1.2.1",
     "@pinia/nuxt": "0.11.2",
     "@types/color": "4.2.0",
     "@types/lodash-es": "4.17.12",
@@ -31,6 +30,7 @@
     "nuxt": "4.1.1",
     "nuxt-security": "2.4.0",
     "pinia": "3.0.3",
+    "pinia-plugin-persistedstate": "4.5.0",
     "prettier": "3.6.2",
     "prettier-plugin-tailwindcss": "0.6.14",
     "rainbowvis.js": "1.1.1",
