--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,7 @@
   "description": "TrapParty's website.",
   "devDependencies": {
     "@dargmuesli/nuxt-cookie-control": "9.1.9",
-    "@dargmuesli/nuxt-vio": "19.1.0",
+    "@dargmuesli/nuxt-vio": "20.0.0-beta.8",
     "@graphql-codegen/cli": "6.1.0",
     "@graphql-codegen/client-preset": "5.2.0",
     "@graphql-codegen/typescript": "5.0.5",
@@ -40,7 +40,6 @@
     "stylelint-config-recommended-vue": "1.6.1",
     "stylelint-config-standard": "39.0.1",
     "stylelint-no-unsupported-browser-features": "8.0.5",
-    "sweetalert2": "11.26.3",
     "tailwindcss": "4.1.17",
     "unplugin-icons": "22.5.0",
     "unplugin-vue-components": "30.0.0",
