--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
       "sharp",
       "unrs-resolver",
       "vue-demi"
-    ]
+    ],
+    "overrides": {
+      "nuxt-og-image": "5.1.12"
+    }
   },
   "private": true,
   "scripts": {
