--- a/package.json
+++ b/package.json
@@ -2,15 +2,8 @@
   "devDependencies": {
     "@commitlint/cli": "20.3.1",
     "@commitlint/config-conventional": "20.3.1",
-    "@semantic-release/changelog": "6.0.3",
-    "@semantic-release/commit-analyzer": "13.0.1",
-    "@semantic-release/git": "10.0.1",
-    "@semantic-release/github": "12.0.2",
-    "@semantic-release/npm": "13.1.3",
-    "@semantic-release/release-notes-generator": "14.1.0",
     "husky": "9.1.7",
-    "lint-staged": "16.2.7",
-    "semantic-release": "25.0.2"
+    "lint-staged": "16.2.7"
   },
   "engines": {
     "node": "24"
