--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,7 @@
     "eslint": "9.39.2",
     "graphql": "16.12.0",
     "lodash-es": "4.17.23",
-    "nuxt": "4.3.0",
+    "nuxt": "https://pkg.pr.new/nuxt@34210",
     "nuxt-security": "2.5.1",
     "pinia": "3.0.4",
     "pinia-plugin-persistedstate": "4.7.1",
