--- a/package.json
+++ b/package.json
@@ -24,29 +24,29 @@
   },
   "private": true,
   "scripts": {
-    "build": "pnpm --dir src run build",
-    "build:node": "pnpm --dir src run build:node",
-    "build:static": "pnpm --dir src run build:static",
-    "dev": "pnpm --dir src run dev",
-    "generate": "pnpm --dir src run generate",
+    "build": "pnpm run --dir src build",
+    "build:node": "pnpm run --dir src build:node",
+    "build:static": "pnpm run --dir src build:static",
+    "dev": "pnpm run --dir src dev",
+    "generate": "pnpm run --dir src generate",
     "lint": "pnpm -r run lint",
     "prepare": "husky",
-    "start:dev": "pnpm --dir src run start:dev",
-    "start:node": "pnpm --dir src run start:node",
-    "start:static": "pnpm --dir src run start:static",
-    "test:e2e": "pnpm --dir tests run test:e2e",
-    "test:e2e:docker:br": "pnpm --dir tests run test:e2e:docker:br",
-    "test:e2e:docker:build": "pnpm --dir tests run test:e2e:docker:build",
-    "test:e2e:docker:run": "pnpm --dir tests run test:e2e:docker:run",
-    "test:e2e:docker:server:dev": "pnpm --dir tests run test:e2e:docker:server:dev",
-    "test:e2e:docker:server:dev:update": "pnpm --dir tests run test:e2e:docker:server:dev:update",
-    "test:e2e:docker:server:node": "pnpm --dir tests run test:e2e:docker:server:node",
-    "test:e2e:docker:server:node:update": "pnpm --dir tests run test:e2e:docker:server:node:update",
-    "test:e2e:docker:server:static": "pnpm --dir tests run test:e2e:docker:server:static",
-    "test:e2e:docker:server:static:update": "pnpm --dir tests run test:e2e:docker:server:static:update",
-    "test:e2e:server:dev": "pnpm --dir tests run test:e2e:server:dev",
-    "test:e2e:server:node": "pnpm --dir tests run test:e2e:server:node",
-    "test:e2e:server:static": "pnpm --dir tests run test:e2e:server:static"
+    "start:dev": "pnpm run --dir src start:dev",
+    "start:node": "pnpm run --dir src start:node",
+    "start:static": "pnpm run --dir src start:static",
+    "test:e2e": "pnpm run --dir tests test:e2e",
+    "test:e2e:docker:br": "pnpm run --dir tests test:e2e:docker:br",
+    "test:e2e:docker:build": "pnpm run --dir tests test:e2e:docker:build",
+    "test:e2e:docker:run": "pnpm run --dir tests test:e2e:docker:run",
+    "test:e2e:docker:server:dev": "pnpm run --dir tests test:e2e:docker:server:dev",
+    "test:e2e:docker:server:dev:update": "pnpm run --dir tests test:e2e:docker:server:dev:update",
+    "test:e2e:docker:server:node": "pnpm run --dir tests test:e2e:docker:server:node",
+    "test:e2e:docker:server:node:update": "pnpm run --dir tests test:e2e:docker:server:node:update",
+    "test:e2e:docker:server:static": "pnpm run --dir tests test:e2e:docker:server:static",
+    "test:e2e:docker:server:static:update": "pnpm run --dir tests test:e2e:docker:server:static:update",
+    "test:e2e:server:dev": "pnpm run --dir tests test:e2e:server:dev",
+    "test:e2e:server:node": "pnpm run --dir tests test:e2e:server:node",
+    "test:e2e:server:static": "pnpm run --dir tests test:e2e:server:static"
   },
   "type": "module"
 }
